# test-mpl-d3

./: .gitignore  pyproject.toml
test_mpld3/: __main__.py  main.py
test_mpld3/bundle/: index.html
test_mpld3_frontend/: .eslintrc.json  package.json  tsconfig.json  webpack.config.js
test_mpld3_frontend/bundle/: index.html
test_mpld3_frontend/src/: Application.tsx  index.html  index.tsx  mpld3.d.ts
